Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Resume by kung-fu-tzu</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="Resume : All about me a professional" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>Resume</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1>Resume</h1>
-        <p>All about me a professional</p>
 
-        <p class="view"><a href="https://github.com/kung-fu-tzu/resume">View the Project on GitHub <small>kung-fu-tzu/resume</small></a></p>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/kung-fu-tzu/resume">View on GitHub</a>
 
+          <h1 id="project_title">Resume</h1>
+          <h2 id="project_tagline">All about me a professional</h2>
 
-        <ul>
-          <li><a href="https://github.com/kung-fu-tzu/resume/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/kung-fu-tzu/resume/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/kung-fu-tzu/resume">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/kung-fu-tzu/resume/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/kung-fu-tzu/resume/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
+
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
         <h1>Hello there!</h1>
 
 <p>My name is Peter. I'm 28. Live in Moscow, Russia.</p>
@@ -80,9 +83,9 @@
 
 <p>The main two periods of my education/work/projects:</p>
 
-<ol>
-<li>2006-2013</li>
-</ol><p>Single company, single big project: <a href="http://www.inshaker.ru/">www.inshaker.ru</a></p>
+<h2>2006-2013</h2>
+
+<p>Single company, single big project: <a href="http://www.inshaker.ru/">www.inshaker.ru</a></p>
 
 <p>As a team lead, I did here all flavors of JavaScript. Were the administrator of a few linux servers. Had designed (UI only, not graphics) few heavily interactive pages, implemented them and do support them till now.</p>
 
@@ -96,9 +99,9 @@
 <li>liby.js (second big thing in my life): full stack JS library and widget set for browsers from MSIE 6 to the latest Chrome;</li>
 <li>ngx_http_js_module: an experiment of embedding JS engine into the event based nginx http server;</li>
 <li>bloggin on technologies: it helped me a lot to understand the experience I were getting.</li>
-</ul><ol>
-<li>2000-2006</li>
-</ol><p>Perl, Perl, Perl :)</p>
+</ul><h2>2000-2006</h2>
+
+<p>Perl, Perl, Perl :)</p>
 
 <p>As a perl developer I had an opportunity to work for some small companies as a junior developer, medium developer, a team lead, and work for for myself.</p>
 
@@ -136,12 +139,17 @@ http://www.inshaker.ru/geeks/top-errors.html
 <p>I really like games Braid, FEZ, and Portal. And Machinarium too.
 In Quake-like game Sauerbraten (Cube 2) our office team of geeks gain a lot of frags last years.</p>
       </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/kung-fu-tzu">kung-fu-tzu</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">Resume maintained by <a href="https://github.com/kung-fu-tzu">kung-fu-tzu</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <script src="javascripts/scale.fix.js"></script>
+
     
+
   </body>
 </html>
